--- a/kakao2db.html
+++ b/kakao2db.html
@@ -17,8 +17,8 @@
             내   용: <input type="text" name="contents"> <br>
         </div>
         <div>
-            <input type="text" name="lat" id="search_lat"> <--위도 좌표값을 불러올 부분
-            <input type="text" name="lng" id="search_lng"> <--경도 좌표값을 불러올 부분
+            <input type="hidden" name="lat" id="search_lat"> // 입력된 주소에 해당하는 위도
+            <input type="hidden" name="lng" id="search_lng"> // 입력된 주소에 해당하는 경도
         </div>
         <div>
             <input type="submit" value="전송">
